# ATOM

./: .gitignore  AGENTS.md  CLAUDE.md  NEXT_SESSION.md  README.md  agentic_client_bench.sh  atom_gpu_timer.patch  bench.py  bench_ab.py  bench_qwen_fp4.sh  ci-gating-test.md  curl_minimax.sh  curtest.sh  dpsk_fp4.sh  example.py  k3.avif  k3.md  launch_deepseek_v4.sh  m3.diff  mha.diff  oot_ut_changes.patch  pyproject.toml  qwen_task.sh  run_qwen_fp4.sh  run_serve.sh  serve_minimax.sh  setup.py  test_loader_sim.py  test_vision_encoder.py  test_vision_forward.py  test_vision_real_weights.py  verify_disagg.py  vllm-infqps-concurrency128-DeepSeek-R1-20260402-012233.json  vllm-infqps-concurrency128-DeepSeek-R1-20260414-230320.json  vllm-infqps-concurrency128-DeepSeek-R1-20260414-232045.json  vllm-infqps-concurrency128-DeepSeek-R1-20260417-190306.json  vllm-infqps-concurrency128-DeepSeek-R1-20260417-195033.json  vllm-infqps-concurrency128-DeepSeek-R1-20260417-212223.json  vllm-infqps-concurrency128-DeepSeek-R1-20260417-215713.json  vllm-infqps-concurrency128-DeepSeek-R1-20260417-230352.json  (+88 more)
.claude/: CLAUDE.md
.github/: actionlint.yaml  runner-config.yml
atom/: __init__.py  config.py  quant_spec.py  sampling_params.py
atomesh-accuracy-dashboard/: data.js
atomesh-mocker-dashboard/: data.js  index.html
benchmark-dashboard/: atomesh_summary.js  data.js  index.html  models_map.js
deepseek_v4/: run_v4_tp8_dpa.sh  run_v4_tp8_dpa_pd_bench.sh  run_v4_tp8_dpa_pd_decode.sh  run_v4_tp8_dpa_pd_gsm8k.sh  run_v4_tp8_dpa_pd_prefill.sh  run_v4_tp8_dpa_pd_router.sh
docs/: Makefile  (+61 more)
(+1069 files in other folders)
