[build-system]
requires = ["setuptools_scm[toml]>=6.2"]

[project]
name = "atom"
authors = [{ name = "ValarLip" }]
license = "MIT"
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dynamic = ["version"]
dependencies = ["pybind11", "transformers", "zmq", "xxhash", "fastapi", "psutil", "protobuf", "uvicorn", "aiohttp", "datasets"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.urls]
Homepage = "https://github.com/ROCm/ATOM"
Repository = "https://github.com/ROCm/ATOM"
Issues = "https://github.com/ROCm/ATOM/issues"

[tool.setuptools_scm]
write_to = "atom/_version.py"
write_to_template = "__version__ = '{version}'\n"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["atom*"]
